# tinvest-mcp

./: .env.example  .gitignore  pyproject.toml
deploy/: deploy.sh  tinvest-mcp.service
src/tinvest_mcp/: __init__.py  __main__.py  config.py  scheduler.py  server.py  storage.py
src/tinvest_mcp/tinvest/: client.py  money.py
src/tinvest_mcp/tools/: accounts.py  instruments.py  market_data.py  operations.py  portfolio.py  positions.py  report.py  tracker.py
