[project]
name = "tinvest-mcp"
version = "0.1.0"
description = "MCP server over T-Investments API"
readme = "README.md"
authors = [
    { name = "pisakov", email = "pisakov@surf.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
]

[project.scripts]
tinvest-mcp = "tinvest_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
